<resources>
    <string name="app_name">MovieApp</string>

    <string name="tab_menu_alert">提醒</string>
    <string name="tab_menu_profile">信息</string>
    <string name="tab_menu_pay">我的</string>
    <string name="tab_menu_setting">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="vip_play">会员独享</string>
    <string name="vip_string1">激情无限成人影院，高清热播院线大片</string>
    <string name="vip_string2">性感劲爆美女直播，独家私密网红视频</string>
    <string name="vip_string3">立即开通会员，免费观看所有激情视频</string>
    <string name="pay_info">"亲爱的用户：
\u0009\u0009在使用羞羞影音(以下简称羞羞影音)时,请您务必仔细阅读并透彻理解本声明.您可以选择不使用羞羞影音, 但您如果使用羞羞影音,您的行为将被视为对本声明的全部认可. 　羞羞影音中的视频均为羞羞影音以非人工检索的方式、根据您选择或键入的关键 字自动生成到第三方网页的链接,除羞羞影音注明之服务条款外,其他一切因使用羞羞影音而可能遭致的意外、疏忽、侵权及其造成的损失(包括因 下载搜索链接到的第三网站的内容而感染到的病毒),羞羞影音对其概不负责,亦不承担任何法律责任.任何通过使用羞羞影音而搜索链接到的第三方 网页均系他人制作或提供,您可能从该第三方网页上获得视频及享用服务,羞羞影音对其合法性概不负责,亦不承担任何法律责任.羞羞影音搜索结果 根据您选择或键入的关键字自动搜索获得并生成,不代表羞羞影音赞成被搜索到的第三网页上的内容或立场.您应该对搜索引擎的结果自行承担风险.羞羞影音不做任何形式的保证;不保证搜索结果满足您的要求,不保证搜索服务不中断;不保证搜索结果的安全性,正确性、及时性、合法性. 因网络状况,通讯线路、第三网站等任何原因而导致您不能正常使用羞羞影音,羞羞影音不承担任何法律责任.羞羞影音尊重并保护所有使用羞羞影音 用户的个人隐私权,您注册的个人资料,非经您亲自许可或根据相关法律、法规的强制性规定,羞羞影音不会主动的泄漏给第三方.羞羞影音提 醒您;您在使用搜索引擎时输入的关键字将不被认为是您的个人隐私资料.任何网站如果不想被羞羞影音收录(即不被搜索到)应及时向羞羞影音 反映,否则,羞羞影音将依照惯例视其为可收录网站.任何单位或者个人认为通过羞羞影音链接所搜索到的第三方网页内容可能涉嫌侵犯其信 息网络传播权,应及时向羞羞影音提出书面权利通知,并提出身份证明,权属证明及详细侵权情况证明.羞羞影音在收到上述法律文件后,将会依 法尽快断开相关链接内容."</string>
    <string name="vip_m_info">仅需￥24</string>
    <string name="vip_y_info">仅需￥58</string>
    <string name="vip_n_info">仅需￥98</string>
    <string name="vip_show">领取会员专享大礼包</string>
    <string name="imgDesc">图片描述</string>

    <string name="setting_account">个人账号</string>
    <string name="setting_phone">投诉邮箱</string>
    <string name="setting_email">gamex6u2016@gmail.com</string>
    <string name="setting_protocol">用户协议</string>
    <string name="setting_cleanCache">清楚缓存</string>
    <string name="setting_aboutus">关于我们</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="setting_vip">VIP等级</string>
    <string name="play_count">播放量:%1$d万</string>

</resources>
