<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical" >


    <RelativeLayout
        android:id="@+id/id_settings_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/preference_single_item"
        android:clickable="true"
        android:gravity="center_vertical" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imgDesc"
            android:scaleType="matrix"
            android:src="@mipmap/settings_person" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/setting_account"
            android:textColor="#000"
            android:textSize="17sp"
            android:layout_marginLeft="40dp"
            />
        <TextView
            android:id="@+id/id_settings_person_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="1456369885239"
            android:textColor="#000"
            android:textSize="17sp"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_settings_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_single_item"
        android:clickable="true"
        android:gravity="center_vertical" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imgDesc"
            android:scaleType="matrix"
            android:src="@mipmap/settings_phone" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/setting_phone"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginLeft="40dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_settings_protocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_first_item"
        android:clickable="true"
        android:gravity="center_vertical" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imgDesc"
            android:scaleType="matrix"
            android:src="@mipmap/settings_protocol" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/setting_protocol"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginLeft="40dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_settings_cleanCache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_item"
        android:clickable="true"
        android:gravity="center_vertical" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imgDesc"
            android:scaleType="matrix"
            android:src="@mipmap/settings_more" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/setting_cleanCache"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginLeft="40dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/id_settings_aboutus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_last_item"
        android:clickable="true"
        android:gravity="center_vertical" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imgDesc"
            android:scaleType="matrix"
            android:src="@mipmap/settings_aboutus" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/setting_aboutus"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginLeft="40dp"
            />
    </RelativeLayout>

</LinearLayout>